The bug that allowed horizontal scrolling due to the sub-menu width on smartphones has been fixed.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -153,7 +153,7 @@ body {
 .settings-list {
   width: 33vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: -33vw;
   padding: 20px;
